--- a/locales/en.json
+++ b/locales/en.json
@@ -475,7 +475,7 @@
     "demigods": {
       "title": "Demi God Tales <br>Tournament",
       "upTo": "€20,000",
-      "name": "Become the hero of the Demi God Tales",
+      "name": "Tell the story of Demi God tales",
       "text": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament."
     },
     "twitterGiveaway": {
@@ -1431,25 +1431,25 @@
     ]
   },
   "demigods": {
-    "title": "Demi God Tales Tournament<br>Round I",
+    "title": "Demi Gods Tales <br/>Tournament <br/>Round II",
     "prize": "€20,000",
     "text": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
     "textMobile": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
     "terms": [
       {
-        "title": "Round I runs between August 24th 00:00 GMT and August 30th 23:59 GMT.<br><br>"
+        "title": "Round II runs between August 30th 00:00 GMT and September 5th 23:59 GMT.<br><br>"
       },
       {
-        "title": "Participating games: <br>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II.<br><br>"
+        "title": "Participating games: <br>Demi Gods III, Demi Gods III – 15 Lines, Book Of Demi Gods III.<br><br>"
       },
       {
         "title": "The 150 first players on the leaderboard will share a prize of 20,000 EUR.<br><br>"
       },
       {
-        "title": "Play any of the participating games. Each win rewards you with a score based on the win multiplier (for example, if you waged 1 EUR and won 10 EUR, you will be rewarded with 10 points)."
+        "title": "Play any of the participating games. Each time the “Odin” symbol lands on one of the reels, you will be rewarded with 1 point (for example, if at the end of a spin 3 Odin symbols appear on the reels, you will be rewarded with 3 points)."
       },
       {
-        "title": "Points received are summed up throughout the tournament period. The more points you collect, the higher your position on the leaderboard."
+        "title": "5. Points received are tallied throughout the tournament period. The more points you collect, the higher your position on the leaderboard."
       },
       {
         "title": "Minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
