--- a/locales/de.json
+++ b/locales/de.json
@@ -476,9 +476,9 @@
       "text": "Es ist Zeit fürs Weekly Derby und unsere Preise lassen dich mit den Hufen scharren, um als Erster die Ziellinie zu überqueren!<br/><br/>Das Derby läuft jede Woche 7 Tage lang, und zwar von Donnerstag um 00:01 Uhr (UTC) bis Mittwoch um 23:59 Uhr (UTC). Sichere dir die Chance, dir mit 40 glücklichen Reitern den podiumswürdigen Preispool von 2.500 € zu teilen.<br/><br/>Mach einfach einen Mindesteinsatz von 0,5 € und sei startklar für das Rennen.<br/><br/>Viel Glück und lass uns das Derby beginnen! "
     },
     "demigods": {
-      "title": "Demi God Tales <br/>Tournament <br/>Runde I",
+      "title": "Demi Gods Tales <br/>Tournament",
       "upTo": "20.000 €",
-      "name": "Werden Sie der Held in Demi God Tales",
+      "name": "Erzählen Sie die Geschichte der Demi God Tales",
       "text": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst."
     },
     "twitterGiveaway": {
@@ -1434,25 +1434,25 @@
     ]
   },
   "demigods": {
-    "title": "Demi God Tales Tournament<br>Runde I",
+    "title": "Demi Gods Tales <br/>Tournament<br/> Runde II",
     "prize": "20.000 €",
     "text": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst.",
     "textMobile": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst.",
     "terms": [
       {
-        "title": "Runde I beginnt am 24. August um 00:00 Uhr UTC und endet am 30. August 2021 um 23:00 Uhr UTC.<br><br>"
+        "title": "Runde II beginnt am 30. August um 00:00 Uhr UTC und endet am 5. September 2021 um 23:00 Uhr UTC.<br><br>"
       },
       {
-        "title": "Teilnehmende Spiele:<br>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II.<br><br>"
+        "title": "Teilnehmende Spiele:<br>Demi Gods III, Demi Gods III – 15 Lines, Book Of Demi Gods III.<br><br>"
       },
       {
         "title": "Die 150 Bestplatzierten teilen sich den Gesamtgewinn von 20.000 Euro.<br><br>"
       },
       {
-        "title": "Spielen Sie eines oder mehrere der teilnehmenden Spiele. Jeder Gewinn bringt Ihnen Wertungspunkte entsprechend dem Gewinnmultiplikator (wird zum Beispiel mit einem gesetzten Euro ein Gewinn von 10 Euro erzielt, ergibt das 10 Punkte für Sie)."
+        "title": "Spielen Sie eines oder mehrere der teilnehmenden Spiele. Jedes Mal, wenn das Symbol „Odin“ auf einer der Walzen erscheint, erhalten Sie 1 Wertungspunkt (wenn beispielsweise am Ende einer Ausspielung 3 Odinsymbole auf den Walzen angezeigt werden, erhalten Sie 3 Punkte)."
       },
       {
-        "title": "Die gesammelten Punkte werden während des gesamten Turnierverlaufs aufaddiert. Je mehr Punkte Sie sammeln, desto besser Ihre Platzierung in der Rangliste."
+        "title": "Die erhaltenen Punkte werden über den gesamten Turnierverlauf summiert. Je mehr Punkte Sie sammeln, desto besser Ihre Platzierung in der Rangliste."
       },
       {
         "title": "Der zur Teilnahme an dem Turnier berechtigende Mindesteinsatz je Ausspielung beträgt 0,5 Euro."
