--- a/locales/fr.json
+++ b/locales/fr.json
@@ -460,9 +460,9 @@
       "text": "C’est l’heure du Weekly Derby et nos prix vous feront trépigner d’impatience pour arriver en premier!<br/><br/>En cours pendant 7 jours chaque semaine du jeudi 00 h 01 UTC au mercredi 23 h 59 UTC. Saisissez votre chance de partager une cagnotte de 2 500 € avec 40 coureurs chanceux.<br/><br/>Vous n’avez qu’à faire une mise de 0,5 € et être prêt(e) pour la course.<br/><br/>Bonne chance et que le Derby commence!"
     },
     "demigods": {
-      "title": "Demi God Tales <br/>Tournament <br/>1er tour",
-      "upTo": "20.000 €",
-      "name": "Devenez le héros de Demi God Tales",
+      "title": "Demi Gods Tales <br/>Tournament",
+      "upTo": "20 000 €",
+      "name": "Racontez l’histoire de Demi God Tales",
       "text": "Les mythes grecs sur les dieux, les demi-dieux, les héros et les humains comptent un millier d’histoires fascinantes racontées à l’humanité depuis des siècles. Spinomenal a pris ces contes grandioses et les a transformés en une série inoubliable de jeux de machines à sous dans le tournoi Demi Gods Tales."
     },
     "twitterGiveaway": {
@@ -1417,32 +1417,32 @@
     ]
   },
   "demigods": {
-    "title": "Demi God Tales Tournament<br/>1er tour",
-    "prize": "20.000 €",
+    "title": "Demi Gods Tales <br>Tournament <br>2er tour",
+    "prize": "20 000 €",
     "text": "Les mythes grecs sur les dieux, les demi-dieux, les héros et les humains comptent un millier d’histoires fascinantes racontées à l’humanité depuis des siècles. Spinomenal a pris ces contes grandioses et les a transformés en une série inoubliable de jeux de machines à sous dans le tournoi Demi Gods Tales.",
     "textMobile": "Les mythes grecs sur les dieux, les demi-dieux, les héros et les humains comptent un millier d’histoires fascinantes racontées à l’humanité depuis des siècles. Spinomenal a pris ces contes grandioses et les a transformés en une série inoubliable de jeux de machines à sous dans le tournoi Demi Gods Tales.",
     "terms": [
       {
-        "title": "El 1er tour se déroule du 24 août 2021 (0 h 00 UTC) au 30 août 2021 (23 h 00 UTC).<br><br>"
+        "title": "El 2er tour se déroule du 30 août 2021 (0 h 00 UTC) au 5 septembre 2021 (23 h 00 UTC).<br><br>"
       },
       {
-        "title": "Jeux participants:<br/>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II.<br><br>"
+        "title": "Jeux participants:<br>Demi Gods III, Demi Gods III – 15 Lines, Book Of Demi Gods III.<br><br>"
       },
       {
         "title": "Les 150 premiers joueurs du classement se partageront un prix de 20 000 EUR.<br><br>"
       },
       {
-        "title": "Jouez à l’un des jeux participants. Chaque gain vous récompense avec un score basé sur le multiplicateur de gain (par exemple, si vous avez misé 1 EUR et gagné 10 EUR, vous serez récompensé par 10 points)."
+        "title": "Jouez à l’un des jeux participants. Chaque fois que le symbole « Odin » apparaît sur l’un des rouleaux, vous serez récompensé par 1 point (par exemple, si à la fin d’un tour) 3 symboles « Odin » apparaissent sur les rouleaux, vous serez récompensé par 3 points). "
       },
       {
-        "title": "Les points reçus sont cumulés pendant toute la durée du tournoi. Plus vous accumulez de points, plus vous êtes bien placé dans le classement."
+        "title": "Les points reçus sont comptabilisés pendant toute la durée du tournoi. Plus vous accumulez de points, plus vous êtes bien placé dans le classement."
       },
       {
         "title": "La mise minimale de qualification par tour pour participer au tournoi est de 0,5 EUR."
       }
     ],
     "metaInfo": {
-      "title": "➤ Le tournoi Demi God Tales avec une cagnotte impressionnante de 40.000 € – Jouez à vos jeux préférés et gagnez des prix exceptionnels!",
+      "title": "➤ Le tournoi Demi God Tales avec une cagnotte impressionnante de 40 000 € – Jouez à vos jeux préférés et gagnez des prix exceptionnels!",
       "description": "✭ Tentez votre chance dans le nouveau Demi God Tales de Spinomenal  ➔ Accomplissez des missions et gagnez des prix!"
     }
   },
