--- a/locales/gr.json
+++ b/locales/gr.json
@@ -463,11 +463,11 @@
       "name" : "ΑΝΑΙΒΕΙΤΕ ΣΤΟ ΑΛΛΟΓΟ ΓΙΑ ΤΟ Weekly Derby",
       "text" : "Είναι η ώρα του Weekly Derby  και τα βραβεία μας θα σας κάνουν να περιμένετε με ανυπομονησία! <br/><br/>Λειτουργεί για 7 ημέρες κάθε εβδομάδα από Πέμπτη 00:01 Συντονισμένη Παγκόσμια Ώρα (UTC) έως Τετάρτη 23:59 Συντονισμένη Παγκόσμια Ώρα (UTC). Πάρτε την ευκαιρία για να μοιραστείτε ένα σύνολο επάθλου 2.500 € με 40 τυχερούς αναβάτες. <br/><br/>Απλά κάντε ένα ελάχιστο στοίχημα 0,5 € και ετοιμαστείτε για τον αγώνα. <br/><br/>Καλή επιτυχία και ξεκινάμε το Ντέρμπι!"
     },
-    "demigods" : {
-      "title" : "Demi God Tales <br>Tournament",
-      "upTo" : "€20,000",
-      "name" : "Become the hero of the Demi God Tales",
-      "text" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament."
+    "demigods": {
+      "title": "Demi God Tales <br>Tournament",
+      "upTo": "€20,000",
+      "name": "Tell the story of Demi God tales",
+      "text": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament."
     },
     "twitterGiveaway" : {
       "title" : "twitter<br/> Giveaway",
@@ -1417,34 +1417,34 @@
       }
     ]
   },
-  "demigods" : {
-    "title" : "Demi God Tales Tournament<br>Round I",
-    "prize" : "€20,000",
-    "text" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
-    "textMobile" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
-    "terms" : [
+  "demigods": {
+    "title": "Demi Gods Tales <br/>Tournament <br/>Round II",
+    "prize": "€20,000",
+    "text": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
+    "textMobile": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
+    "terms": [
       {
-        "title" : "Round I runs between August 24th 00:00 GMT and August 30th 23:59 GMT."
+        "title": "Round II runs between August 30th 00:00 GMT and September 5th 23:59 GMT.<br><br>"
       },
       {
-        "title" : "Participating games: <br>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II."
+        "title": "Participating games: <br>Demi Gods III, Demi Gods III – 15 Lines, Book Of Demi Gods III.<br><br>"
       },
       {
-        "title" : "The 150 first players on the leaderboard will share a prize of 20,000 EUR."
+        "title": "The 150 first players on the leaderboard will share a prize of 20,000 EUR.<br><br>"
       },
       {
-        "title" : "Play any of the participating games. Each win rewards you with a score based on the win multiplier (for example, if you waged 1 EUR and won 10 EUR, you will be rewarded with 10 points)."
+        "title": "Play any of the participating games. Each time the “Odin” symbol lands on one of the reels, you will be rewarded with 1 point (for example, if at the end of a spin 3 Odin symbols appear on the reels, you will be rewarded with 3 points)."
       },
       {
-        "title" : "Points received are summed up throughout the tournament period. The more points you collect, the higher your position on the leaderboard."
+        "title": "5. Points received are tallied throughout the tournament period. The more points you collect, the higher your position on the leaderboard."
       },
       {
-        "title" : "Minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
+        "title": "Minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
       }
     ],
-    "metaInfo" : {
-      "title" : "➤ Demi God Tales Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
-      "description" : "✭ Try Your Luck In New Demi God Tales by Spinomenal  ➔ Complete Missions - Win Prizes!"
+    "metaInfo": {
+      "title": "➤ Demi God Tales Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
+      "description": "✭ Try Your Luck In New Demi God Tales by Spinomenal  ➔ Complete Missions - Win Prizes!"
     }
   }
 }
