NINE-721 fixed after test

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -5,7 +5,7 @@
     "register": "Enregistrer",
     "terms": "Conditions d'attribution des bonus",
     "registerNow": "S'enregistrer-vous maintenant",
-    "login": "Login",
+    "login": "SE CONNECTER",
     "logIn": "Log in",
     "joinNow": "Adhérez maintenant",
     "deposit": "Dépôt",
