NINE-772 added fi locale, unshowed deposits

--- a/locales/fi.json
+++ b/locales/fi.json
@@ -137,7 +137,7 @@
     "risk" : "RISKIVAROITUKSET",
     "tournaments" : "Turnaukset",
     "lottery" : "Arvonta",
-    "dailyCashback" : "-",
+    "dailyCashback" : "",
     "search" : "Haku"
   },
   "gameCategoriesTabs" : {
