--- a/locales/fi.json
+++ b/locales/fi.json
@@ -1517,5 +1517,38 @@
       "title" : "➤ Demi God Tales Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
       "description" : "✭ Try Your Luck In New Demi God Tales by Spinomenal  ➔ Complete Missions - Win Prizes!"
     }
+  },
+  "happy_harvest_lotto": {
+    "title": "Happy Harvest<br/> Lotto",
+    "promoTitle": "5 000 ilmaiskierrosta sadonkorjuun sankareille",
+    "name": "Happy Harvest Lotto",
+    "prize": "5 000 ilmaiskierrosta",
+    "text": "Syksyn värit ovat täällä! Ilmaiskierrokset ovat kypsiä korjattavaksi talteen!<br/><br/>Happy Harvest Lotto pelataan 1.9.2021–28.9.2021 välisenä aikana. Voit osallistua tekemällä vähimmäistalletuksen 20 €, jolla saat yhden arvontakupongin. Arvontakuponkien määrä on rajoittamaton.",
+    "promoText": "Syksyn värit ovat täällä! Ilmaiskierrokset ovat kypsiä korjattavaksi talteen!<br/><br/>Happy Harvest Lotto pelataan 1.9.2021–28.9.2021 välisenä aikana. Voit osallistua tekemällä vähimmäistalletuksen 20 €, jolla saat yhden arvontakupongin. Arvontakuponkien määrä on rajoittamaton.<br/><br/>Ota siis kupongit haltuun, osallistu aktiivisesti ja nauti työsi hedelmistä!",
+    "terms": [
+      {
+        "text": "Arvonta kestää yhden kuukauden ja käydään 1.9.2021 00:01–28.9.2021 23:59 (UTC) välisenä aikana."
+      },
+      {
+        "text": "Arvontakuponkiin oikeuttava vähimmäistalletus on 20 EUR, 30 CAD/AUD/NZD, 500 CZK, 350 ZAR, 40 BNG, 150 DKK/HRK tai 100 RON."
+      },
+      {
+        "text": "Arvontakuponkien määrää pelaajaa kohti ei ole rajoitettu.."
+      },
+      {
+        "text": "Mikä tahansa kuponki voi voittaa."
+      },
+      {
+        "text": "Pelitili ei saa olla estettynä arvonnan suoritushetkellä."
+      },
+      {
+        "text": "Palkinnot jaetaan automaattisesti kunkin arvontaviikon lopussa joka tiistai."
+      },
+      {
+        "text": "Ilmaiskierrosten kierrätysvaatimus on 5x."
+      }
+    ],
+    "metaTitle": "➤ Happy Harvest Lotto With Solid Prize Pool 5,000 Free Spins - Play Your Favorite Games And Win Great Prizes!",
+    "metaDescription": "✭ Try Your Luck In New Happy Harvest Lotto by NineCasino ➔ Complete Missions - Win Prizes!"
   }
 }
