NINE-722 corrected text

--- a/locales/fi.json
+++ b/locales/fi.json
@@ -1533,7 +1533,7 @@
         "text": "Arvontakuponkiin oikeuttava vähimmäistalletus on 20 EUR, 30 CAD/AUD/NZD, 500 CZK, 350 ZAR, 40 BNG, 150 DKK/HRK tai 100 RON."
       },
       {
-        "text": "Arvontakuponkien määrää pelaajaa kohti ei ole rajoitettu.."
+        "text": "Arvontakuponkien määrää pelaajaa kohti ei ole rajoitettu."
       },
       {
         "text": "Mikä tahansa kuponki voi voittaa."
